Regression: Geometry Nodes: Viewer node permanently disabled inside node group #103136

Closed
opened 2022-12-11 17:10:06 +01:00 by Antti Tikka · 9 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.37

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-10 12:43, hash: fe30856d83
Worked: 3.4
Caused by 90ea1b7643

Short description of error
The viewer node is disabled inside node groups and can't be toggled on.

Exact steps for others to reproduce the error

  1. Add a Geometry Nodes modifier to the default cube.
  2. Open Geometry Node Editor.
  3. Add some node that takes geometry as input, for example, Set Position, and connect the node tree's input geometry to that.
  4. Create a node group out of the added node and enter the group.
  5. Ctrl + Shift + click the group input node to create a viewer node connected to the geometry input.
  6. The viewer is disabled.

#103136.blend

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.37 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-12-10 12:43, hash: `fe30856d83` Worked: 3.4 Caused by 90ea1b7643 **Short description of error** The viewer node is disabled inside node groups and can't be toggled on. **Exact steps for others to reproduce the error** 1. Add a Geometry Nodes modifier to the default cube. 2. Open Geometry Node Editor. 3. Add some node that takes geometry as input, for example, Set Position, and connect the node tree's input geometry to that. 4. Create a node group out of the added node and enter the group. 5. Ctrl + Shift + click the group input node to create a viewer node connected to the geometry input. 6. The viewer is disabled. [#103136.blend](https://archive.blender.org/developer/F14053358/T103136.blend)
Author

Added subscriber: @Symstract

Added subscriber: @Symstract
Iliya Katushenock changed title from Geometry Nodes: Viewer node permanently disabled inside node group to Regressin: Geometry Nodes: Viewer node permanently disabled inside node group 2022-12-11 17:35:21 +01:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can't bisect due to another bugs with the new node id in same time range. I think they were caused by the same reason.

I can't bisect due to another bugs with the new node id in same time range. I think they were caused by the same reason.
Pratik Borhade changed title from Regressin: Geometry Nodes: Viewer node permanently disabled inside node group to Regression: Geometry Nodes: Viewer node permanently disabled inside node group 2022-12-12 05:59:36 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member
Caused by 90ea1b7643 @HooglyBoogly ^
Hans Goudey self-assigned this 2022-12-12 07:26:26 +01:00

This issue was referenced by f613614fce

This issue was referenced by f613614fcebf4dd769abd0d2cfb72fe95ff7bc4c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103136
No description provided.