Fix T103136: Cannot activate viewer node in group

90ea1b76434fe175e99 created an item for the viewer node path
but didn't add it to the list, which also caused memory leaks.